--- a/src/Leek.CLI/Leek.CLI.csproj
+++ b/src/Leek.CLI/Leek.CLI.csproj
@@ -17,6 +17,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RuntimeIdentifiers>win-x64;win-arm64;linux-x64;linux-arm64;osx-x64;osx-arm64</RuntimeIdentifiers>
+    <!-- While the project is a CLI, non-developers will refer to this as leek -->
+    <AssemblyName>Leek</AssemblyName>
   </PropertyGroup>
 
 </Project>
