--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - release
 
+permissions:
+  contents: write
+  
 jobs:
   build-nuget-packages:
     runs-on: ubuntu-latest
